<resources>
    <string name="app_name">Pryce</string>
    <string name="qrcodeLer">Ler QRCode</string>
    <string name="action_settings">Settings</string>
    <string name="caixa_procura">ex: Arroz, Leite, Carne, etc"</string>
    <string name="btn_procurar">Procurar</string>
    <string name="txt_procurar">O que procura?</string>
    <string name="lbl_qrcode">QRCode</string>
    <string name="lbl_aguarde">Aguarde...</string>
    <string name="img_empresa">Empresa</string>
    <string name="google_maps_key">AIzaSyBTs9ShHOmdlmcFOqUAuxzes0nspUtUOW4</string>
    <string name="lbl_empresa">Empresa</string>
    <string name="lbl_cnpj">Cnpj</string>
    <string name="lbl_endereco">Endereco</string>
    <string name="lbl_numero">Numero</string>
    <string name="lbl_cidade">Cidade</string>
    <string name="lbl_uf">Estado</string>
    <string name="lbl_tel">Telefone</string>
    <string name="lbl_produto">Produto</string>
    <string name="lbl_valor">Valor</string>

</resources>
